--- a/estilos.css
+++ b/estilos.css
@@ -1,102 +1,123 @@
+* {
+  font-family: "baloo tamma 2", sans-serif;
+}
 body {
-    margin: 0;
-    padding: 0;
-    background: #369656;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background: #369656;
+}
+
+main {
+  width: 100vw;
+  height: 100vh;
 }
 
 .name {
-    width: 100%;
-    height: 300px;
-    background: #B4E4C4;
-    transform: skewY(-5deg);
+  position: relative;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  padding: 0%;
+  width: 100%;
+  height: 300px;
+  background: #b4e4c4;
+  transform: skewY(-5deg);
+  border: #da7e0e solid 3px;
+}
+/* .profilePicture {
+  border: #369656 solid 3px;
+  height: 100%;
+} */
+
+.content {
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  left: 25%;
+
+  /*   border: #fafafa solid 3px; */
 }
 
-.name .content {
-    width: 50%;
-    height: 50%;
-    position: absolute;
-    left: 25%;
+/* -------------------------------------------- */
+
+.p-1 {
+  color: aliceblue;
+  font-weight: bolder;
+  font-size: 65px;
+  transform: skewY(5deg);
+  margin: 14px 0 0 0;
+  /*   border: #fafafa solid 3px; */
 }
 
-.name .content .p-1 {
-    color: aliceblue;
-    font-family: 'baloo tamma 2', sans-serif;
-    font-weight: bolder;
-    font-size: 65px;
-    transform: skewY(5deg);
-    margin-bottom: 0;
+.p-2 {
+  color: antiquewhite;
+  font-family: "baloo tamma 2", sans-serif;
+  font-size: 35px;
+  transform: skewY(5deg);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.name .content .p-2 {
-
-    color: antiquewhite;
-    font-family: 'baloo tamma 2', sans-serif;
-    font-size: 35px;
-    transform: skewY(5deg);
-    margin-top: 0;
-    margin-bottom: 0;
+.p-3 {
+  color: antiquewhite;
+  font-family: "baloo tamma 2", sans-serif;
+  font-size: 35px;
+  transform: skewY(5deg);
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.name .content .p-3 {
-
-    color: antiquewhite;
-    font-family: 'baloo tamma 2', sans-serif;
-    font-size: 35px;
-    transform: skewY(5deg);
-    margin-top: 0;
-    margin-bottom: 0;
+.name img {
+  position: absolute;
+  top: 10%;
+  left: 5%;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  transform: skewY(5deg);
+  overflow: hidden;
+  border: #369656 solid 3px;
+  height: 150px;
+  width: 150px;
 }
 
-.name .img {
-    position: absolute;
-    top: 1%;
-    right: 2%;
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
-    transform: skewY(5deg);
-    overflow: hidden;
-}
-
-.name .img img {
-    width: 30px;
-    height: 50px;
-}
+/* .name .img img {
+  width: 30px;
+  height: 50px;
+} */
 
 .info {
-    width: 90%;
-    height: auto;
-    background-color: antiquewhite;
-    margin: 5% auto;
-    padding: 20px;
-    border-radius: 20px;
-
+  width: 90%;
+  height: auto;
+  background-color: antiquewhite;
+  margin: 5% auto;
+  padding: 20px;
+  border-radius: 20px;
 }
 
-.info .tituloseccion {
-    color: aliceblue;
-    font-family: 'baloo tamma 2', sans-serif;
-    font-size: xx-large;
-    text-align: center;
-    font-weight: bolder;
-    border-bottom: 2px #B4E4C4;
-
+.tituloseccion {
+  color: aliceblue;
+  font-family: "baloo tamma 2", sans-serif;
+  font-size: xx-large;
+  text-align: center;
+  font-weight: bolder;
+  border-bottom: 2px #b4e4c4;
 }
 
-.info .tituloinfo {
-    color: aliceblue;
-    font-family: 'baloo tamma 2', sans-serif;
-    font-weight: bolder;
-    font-size: large;
-    display: inline;
-    margin-right: 20px;
-
+.tituloinfo {
+  color: aliceblue;
+  font-family: "baloo tamma 2", sans-serif;
+  font-weight: bolder;
+  font-size: large;
+  display: inline;
+  margin-right: 20px;
 }
 
-.info .infoinfo {
-    color: aliceblue;
-    font-family: 'baloo tamma 2', sans-serif;
-    font-weight: normal;
-    font-size: large;
-    display: inline;
+.infoinfo {
+  color: rgb(139, 136, 136);
+  font-family: "baloo tamma 2", sans-serif;
+  font-weight: normal;
+  font-size: large;
+  display: inline;
 }
